--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev"
-    
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dericsp/nextKalanchoe.git"
@@ -20,7 +19,9 @@
   "homepage": "https://github.com/dericsp/nextKalanchoe#readme",
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "next": "^10.0.8",
+    "popper": "^1.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1"
