--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev"
+    ,    "now-build": "next build"
+
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,7 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
-    "next": "^10.0.8",
+    "next": "^10.0.9",
     "popper": "^1.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
