--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
-    ,    "now-build": "next build"
-
+    "dev": "next dev",
+    "now-build": "next build"
   },
   "repository": {
     "type": "git",
@@ -23,7 +22,7 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "next": "^10.0.9",
-    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1"
