--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/dericsp/nextKalanchoe#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "next": "^10.0.9",
