--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-hook-form": "^6.15.5"
   }
 }
