--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
-    "react-hook-form": "^6.15.5"
+    "react-hook-form": "^6.15.5",
+    "react-iframe": "^1.8.0"
   }
 }
