--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "instagram-web-api": "^2.2.2",
     "next": "^10.0.9",
     "nodemailer": "^6.5.0",
     "popper.js": "^1.16.1",
