--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "now-build": "next build"
+    "now-build": "next build",
+    "postbuild": "next-sitemap"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "instagram-web-api": "^2.2.2",
     "jquery": "^3.6.0",
     "next": "^10.0.9",
+    "next-sitemap": "^1.6.9",
     "nodemailer": "^6.5.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
