--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-iframe": "^1.8.0"
   },
   "devDependencies": {
-    "@types/react-gtm-module": "^2.0.0"
+    "@types/react-gtm-module": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-imagemin": "^7.1.0"
   }
 }
